--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,36 @@
 {
+  "name": "j7-dev/wp-toolkit",
+  "description": "A toolkit for WordPress development, library as plugin",
+  "type": "wordpress-plugin",
+  "license": "GPL-2.0-only",
+  "authors": [
+    {
+      "name": "JerryLiu",
+      "email": "j7.dev.gg@gmail.com",
+      "homepage": "https://github.com/j7-dev",
+      "role": "Developer"
+    }
+  ],
   "repositories": [
     {
       "type": "composer",
-      "url": "https://wpackagist.org",
-      "only": [
-        "wpackagist-plugin/*"
-      ]
+      "url": "https://wpackagist.org"
     }
   ],
-  "require": {
-    "yahnis-elsts/plugin-update-checker": "^5.3",
-    "wpackagist-plugin/redux-framework": "^4.4"
-  },
   "config": {
     "allow-plugins": {
-      "composer/installers": false
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
+  },
+  "require": {
+    "j7-dev/wp-utils": "0.2.8"
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "@stable",
+    "wp-coding-standards/wpcs": "@stable",
+    "dealerdirect/phpcodesniffer-composer-installer": "@stable"
+  },
+  "scripts": {
+    "lint": "phpcs"
   }
 }
